Fix url text overlap in userChrome.css

--- a/firefox/chrome/userChrome.css
+++ b/firefox/chrome/userChrome.css
@@ -108,7 +108,7 @@
 
 #urlbar-input {
     margin-left: 0.4em !important;
-    margin-right: 0.4em !important;
+    margin-right: 2em !important;
 }
 
 .urlbarView-row {
